--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,74 @@
 
-.container {
-    background-color: #ecf0f1;
+*{
+    font-family:'Noto Sans', sans-serif;
 }
+
+
+.poke {
+    color:#2c3e50;
+}
+
+
+.btn {
+    background-color: #e74c3c;
+    color: black;
+}
+
+
 
 .pokeimage {
     max-width: 96px;
     max-height: 96px;
 }
 
+.pokemons {
+    padding-top: 10%;
+}
+
+.small-middle-container{
+	margin: auto;
+    margin-top: 10%;
+	width: 35%;
+    min-width: 500px;
+    text-align:center;
+    background-color: white;
+
+}
+
+.shinyButton {
+    padding: 1em;
+}
+
+.toggleShiny {
+    background-color: #f1c40f ;
+    color: white;
+    border: none;
+    padding: 0.25em 1em 0.25em 1em ;
+
+}
+
+.toggleShiny:hover {
+    background-color: #f1c40f ;
+    color: white;
+    opacity: 70%;
+}
+
+h1 {
+    color:#e74c3c;
+}
+
+.index button {
+    margin-top: 11em;
+}
+
+.clicker {
+    background-color: #3498db;
+    border: none;
+    padding-top: 0.25em;
+    padding-right: 0.5em;
+}
+
+.clicker:hover {
+    background-color: #2980b9;
+    opacity:110%;
+}
